// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX jlBsuI k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
      onClick={[Function]}
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
              >
                <span
                  className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                >
                  <img
                    alt=""
                    className="k-ButtonImageNext__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-ifAKCX jlBsuI k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer custom-class k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
      onClick={[Function]}
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
              >
                <span
                  className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                >
                  <img
                    alt=""
                    className="k-ButtonImageNext__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> empty carousel matches with snapshot 1`] = `null`;

exports[`<Carousel /> legacy carousel on desktop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bJubVX k-Carousel k-LegacyCarousel"
>
  <div
    className="k-Grid"
  >
    <div
      className="k-Grid__col--12 k-Grid__col--10@l k-Grid__col--offset-1@l"
    >
      <div
        className="k-Carousel__inner"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
          onClick={[Function]}
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="k-ProjectCard k-Card k-Card--light"
                href={null}
                title={null}
              >
                <div
                  className="k-ProjectCard__grid"
                >
                  <div
                    className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
                  >
                    <span
                      className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                    >
                      <img
                        alt=""
                        className="k-ButtonImageNext__img"
                        src={null}
                      />
                    </span>
                    <p
                      className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                    >
                      <span
                        className="k-u-weight-regular"
                      >
                        Name
                      </span>
                    </p>
                  </div>
                  <div
                    className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
                  >
                    <p
                      className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                    >
                      A
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col--12 k-Grid__col--1@l"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on desktop with withoutLeftOffset={true} matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bJubVX k-Carousel k-LegacyCarousel"
>
  <div
    className="k-Grid"
  >
    <div
      className="k-Grid__col--12 k-Grid__col--11@l k-Grid__col--offset-0@l"
    >
      <div
        className="k-Carousel__inner"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
          onClick={[Function]}
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="k-ProjectCard k-Card k-Card--light"
                href={null}
                title={null}
              >
                <div
                  className="k-ProjectCard__grid"
                >
                  <div
                    className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
                  >
                    <span
                      className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                    >
                      <img
                        alt=""
                        className="k-ButtonImageNext__img"
                        src={null}
                      />
                    </span>
                    <p
                      className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                    >
                      <span
                        className="k-u-weight-regular"
                      >
                        Name
                      </span>
                    </p>
                  </div>
                  <div
                    className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
                  >
                    <p
                      className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                    >
                      A
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col--12 k-Grid__col--1@l"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on mobile matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bJubVX k-Carousel k-LegacyCarousel"
>
  <div
    className="k-Grid"
  >
    <div
      className="k-Grid__col--12 k-Grid__col--10@l k-Grid__col--offset-1@l"
    >
      <div
        className="k-Carousel__inner"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
          onClick={[Function]}
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="k-ProjectCard k-Card k-Card--light"
                href={null}
                title={null}
              >
                <div
                  className="k-ProjectCard__grid"
                >
                  <div
                    className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
                  >
                    <span
                      className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                    >
                      <img
                        alt=""
                        className="k-ButtonImageNext__img"
                        src={null}
                      />
                    </span>
                    <p
                      className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                    >
                      <span
                        className="k-u-weight-regular"
                      >
                        Name
                      </span>
                    </p>
                  </div>
                  <div
                    className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
                  >
                    <p
                      className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                    >
                      A
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col--12 k-Grid__col--1@l"
    />
  </div>
</div>
`;

exports[`<Carousel /> with exportVisibilityProps prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX jlBsuI k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
      onClick={[Function]}
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
              >
                <span
                  className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                >
                  <img
                    alt=""
                    className="k-ButtonImageNext__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with itemsPerPage prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX fFVeAE k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
      onClick={[Function]}
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
              >
                <span
                  className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                >
                  <img
                    alt=""
                    className="k-ButtonImageNext__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX jlBsuI k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
      onClick={[Function]}
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-EHOje ejmMxo k-ProjectCard__grid--flex"
              >
                <span
                  className="sc-dnqmqq hWbcSz k-ButtonImageNext k-ButtonImageNext--withoutPointerEvents"
                >
                  <img
                    alt=""
                    className="k-ButtonImageNext__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-EHOje jtHUlo k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-bZQynM dWuFfX k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;
